--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Cousin-hunting-in-Scandinavia_74893
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74893-h/images/cover.jpg
 creator:
   author:
     agent_name: Williams, Mary Wilhelmine
     gutenberg_agent_id: '57710'
     url: http://www.gutenberg.org/2009/agents/57710
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74893#Cousin-hunting-in-Scandinavia
 gutenberg_issued: '2024-12-14'
 gutenberg_type: Text
 identifiers:
